--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -1,31 +1,21 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Benchmark scipp
 
-# Controls when the workflow will run
 on:
   schedule:
-    - cron: '10 * * * *'
+    - cron: '0,10,20,30,40,50 * * * *'
   
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  benchmark:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Install asv
         shell: bash -l {0}
         run: pip install asv
 
-      # Runs a set of commands using the runners shell
       - name: Run asv benchmarks
         shell: bash -l {0}
         run: asv run -v --skip-existing-commits -m cloud-container
