--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -16,6 +16,10 @@ jobs:
         shell: bash -l {0}
         run: pip install asv
 
+      - name: Configure asv
+        shell: bash -l {0}
+        run: asv machine --machine cloud-container --os "Ubuntu latest" --arch 'x86_64' --cpu "2 Core CPU" --num_cpu 2 --ram '7GB'
+
       - name: Run asv benchmarks
         shell: bash -l {0}
         run: asv run -v --skip-existing-commits -m cloud-container
