--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Run asv benchmarks
         shell: bash -l {0}
-        run: asv run -v --skip-existing-commits -m cloud-container
+        run: asv run -v -m cloud-container
         
       - name: Publish asv results locally
         shell: bash -l {0}
