--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Clone Scipp
+        shell: bash -l {0}
+        run: git checkout https://github.com/scipp/scipp repo
+
       - name: Install asv
         shell: bash -l {0}
         run: pip install asv
