Force stash to be the default when applying to gh_pages

--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -62,7 +62,7 @@ jobs:
           git stash
           git fetch
           git checkout gh_pages
-          git stash pop
+          git checkout stash -- .
 
       - name: Commit changes and new results to github pages
         shell: bash -l {0}
