--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -28,8 +28,8 @@ jobs:
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt update -y
           sudo apt install gcc-11 -y
-          export "CXX=g++-11"
-          export "CC=gcc-11"
+          sudo ln -sf g++-11 /usr/bin/g++
+          sudo ln -sf gcc-11 /usr/bin/gcc
 
       - name: Configure asv
         shell: bash -l {0}
