--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -21,6 +21,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda env create -f repo/scipp-developer.yml
+          conda activate scipp-developer
 
       - name: Install asv
         shell: bash -l {0}
