--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -21,6 +21,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda env create -f repo/scipp-developer.yml
+          . $(dirname $(which conda))/../etc/profile.d/conda.sh
           conda activate scipp-developer
 
       - name: Install asv
