Use what mantid imaging does for miniconda on github actions
      - name: Setup Mambaforge
        uses: conda-incubator/setup-miniconda@v2.1.1
        with:
          miniforge-version: latest
          miniforge-variant: Mambaforge
          environment-file: environment-dev.yml
          activate-environment: mantidimaging-dev
          auto-activate-base: false

--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -17,14 +17,14 @@ jobs:
         shell: bash -l {0}
         run: git clone https://github.com/scipp/scipp repo
 
-      - name: Activate scipp conda env
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Setup Mambaforge and Scipp dev env
+        uses: conda-incubator/setup-miniconda@v2.1.1
         with:
+          miniforge-version: latest
+          miniforge-variant: Mambaforge
+          environment-file: repo/scipp-developer.yml
           activate-environment: scipp-developer
-
-      - name: Install latest GCC/GXX
-        shell: bash -l {0}
-        run: conda install gxx_linux-64>=11
+          auto-activate-base: false
 
       - name: Install asv
         shell: bash -l {0}
