--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add *
+          git add results/\*
           git commit -m "[Bot] Update results"
 
       - name: Push changes
