Fix issues with the commit hash files

--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -17,7 +17,7 @@ jobs:
         shell: bash -l {0}
         run: |
           export SCIPP_COMMIT_HASH="echo $(command git ls-remote https://github.com/scipp/scipp HEAD | head -n1 | sed -e 's/\s.*$//')"
-          grep -Fxq $SCIPP_COMMIT_HASH scipp_commit_hash
+          grep -Fx "$SCIPP_COMMIT_HASH" scipp_commit_hash
 
       - name: Clone Scipp
         shell: bash -l {0}
@@ -55,7 +55,7 @@ jobs:
       - name: Create the Scipp repo commit hash file
         shell: bash -l {0}
         run: |
-          echo $SCIPP_COMMIT_HASH >> scipp_commit_hash
+          $SCIPP_COMMIT_HASH >> scipp_commit_hash
 
       - name: Push changes
         uses: ad-m/github-push-action@master
