--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -69,7 +69,10 @@ jobs:
 
       - name: Run asv benchmarks
         shell: bash -l {0}
-        run: asv run -v -m cloud-container -e
+        run: |
+          # Use mamba for env creation
+          export CONDA_EXE=$(which mamba)
+          asv run -v -m cloud-container -e
         
       - name: "Check ccache performance"
         shell: bash -l {0}
