--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -28,6 +28,16 @@ jobs:
       - name: Clone Scipp
         shell: bash -l {0}
         run: git clone https://github.com/scipp/scipp repo
+        
+      - name: Cache conda pkgs
+        uses: actions/cache@v2
+        env:
+          # Increase this value to reset cache if etc/example-environment.yml has not changed
+          CACHE_NUMBER: 0
+        with:
+          path:  /usr/share/miniconda3/pkgs
+          key:
+            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('repo/scipp-developer.yml') }}
 
       - name: Setup Mambaforge and Scipp dev env
         uses: conda-incubator/setup-miniconda@v2.1.1
