--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -63,11 +63,12 @@ jobs:
       
       - name: "Restore ccache"
         uses: actions/cache@v1.1.0
+        env:
+          # Increase this value to reset cache if etc/example-environment.yml has not changed
+          CACHE_NUMBER: 0
         with:
           path: .ccache
-          key: ccache-${{ secrets.CACHE_VERSION }}-${{ steps.prepare-ccache.outputs.key }}-${{ steps.prepare-ccache.outputs.timestamp }}
-          restore-keys: |
-            ccache-${{ secrets.CACHE_VERSION }}-${{ steps.prepare-ccache.outputs.key }}-
+          key:  ${{ runner.os }}-ccache-${{ env.CACHE_NUMBER }}
 
       - name: Install asv
         shell: bash -l {0}
