--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -67,7 +67,7 @@ jobs:
           # Increase this value to reset cache if etc/example-environment.yml has not changed
           CACHE_NUMBER: 0
         with:
-          path: .ccache
+          path: $CCACHE_DIR
           key:  ${{ runner.os }}-ccache-${{ env.CACHE_NUMBER }}
 
       - name: Install asv
