Use conda ccache

--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -48,18 +48,10 @@ jobs:
           activate-environment: scipp-developer
           auto-activate-base: false
       
-      - name: Install and Setup ccache
+      - name: Install ccache
         shell: bash -l {0}
         run: |
-          sudo apt-get update -y && sudo apt-get install -y ccache
-          # Make gcc/gxx symlinks first in path
-          sudo /usr/sbin/update-ccache-symlinks
-          echo "/usr/lib/ccache" >> $GITHUB_PATH
-          # Prep Ccache
-          echo "::set-output name=key::benchmark-$RUNNER_OS"
-          echo "::set-output name=timestamp::$(date +%Y%m%d-%H%M%S)"
-          ccache -p
-          ccache -z
+          mamba install ccache
       
       - name: "Restore ccache"
         uses: actions/cache@v1.1.0
