--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -82,18 +82,19 @@ jobs:
         run: ccache -s
         if: always()
 
+      - name: Create the Scipp repo commit hash file
+        shell: bash -l {0}
+        run: |
+          $SCIPP_COMMIT_HASH > scipp_commit_hash
+
       - name: Commit changes and new results to github pages
         shell: bash -l {0}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add results/\*
+          git add scipp_commit_hash
           git commit -m "[Bot] Update results"
-
-      - name: Create the Scipp repo commit hash file
-        shell: bash -l {0}
-        run: |
-          $SCIPP_COMMIT_HASH > scipp_commit_hash
 
       - name: Push changes
         uses: ad-m/github-push-action@master
