--- a/.github/workflows/bench-scipp.yml
+++ b/.github/workflows/bench-scipp.yml
@@ -2,7 +2,7 @@ name: Benchmark scipp
 
 on: 
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0/2 * * *'
   push:
   
 
@@ -47,20 +47,6 @@ jobs:
           environment-file: repo/scipp-developer.yml
           activate-environment: scipp-developer
           auto-activate-base: false
-      
-      - name: Install ccache
-        shell: bash -l {0}
-        run: |
-          mamba install ccache
-      
-      - name: Restore ccache cache
-        uses: actions/cache@v1.1.0
-        env:
-          # Increase this value to reset cache if etc/example-environment.yml has not changed
-          CACHE_NUMBER: 0
-        with:
-          path: $CCACHE_DIR
-          key:  ${{ runner.os }}-ccache-${{ env.CACHE_NUMBER }}
 
       - name: Install asv
         shell: bash -l {0}
