--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -27,9 +27,9 @@ jobs:
         uses: mamba-org/provision-with-micromamba@main
         with:
           micromamba-version: 0.23.0
-          environment-file: scipp/.buildconfig/${{ matrix.variant.cmake-preset }}.yml
+          environment-file: scipp/.buildconfig/ci-linux.yml
           cache-env: true
-          extra-specs: python=${{ matrix.python-version }}
+          extra-specs: python="3.8"
 
       - uses: hendrikmuhs/ccache-action@v1.2.2
 
