--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -23,21 +23,15 @@ jobs:
           submodules: true
           fetch-depth: 0  # history required so cmake can determine version
 
-      - name: Setup conda environment
-        uses: mamba-org/provision-with-micromamba@main
+      - uses: actions/setup-python@v3
         with:
-          micromamba-version: 0.23.0
-          environment-file: scipp/.buildconfig/ci-linux.yml
-          cache-env: true
-          extra-specs: python="3.8"
+          python-version: 3.8
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r scipp/requirements/ci.txt
 
       - uses: hendrikmuhs/ccache-action@v1.2.2
 
-      - run: |
-          cd scipp
-          cmake --preset ci-linux
-          cmake --build --preset build
-
+      - run: cd scipp && tox -e lib
       - run: cd scipp && tox -e asv
 
         #- uses: stefanzweifel/git-auto-commit-action@v4
