--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -16,35 +16,29 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
         with:
           repository: 'scipp/scipp'
-          path: 'scipp'
           submodules: true
           fetch-depth: 0  # history required so cmake can determine version
+      - uses: actions/checkout@v3
+        with:
+          path: 'scipp-benchmarks'
 
       - uses: actions/setup-python@v3
         with:
           python-version: 3.8
       - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r scipp/requirements/ci.txt
+      - run: python -m pip install -r requirements/ci.txt
 
       - uses: hendrikmuhs/ccache-action@v1.2.2
 
-      - run: cd scipp && tox -e lib
-      - run: cd scipp && tox -e asv
+      - run: tox -e lib
+      - run: tox -e asv
 
-        #- uses: stefanzweifel/git-auto-commit-action@v4
-        #  if: ${{ contains(matrix.variant.os, 'ubuntu') && github.ref == 'refs/heads/main' }}
-        #  with:
-        #    repository: scipp-benchmarks
-
-      # - name: Deploy benchmark results
-      #   if: ${{ contains(matrix.variant.os, 'ubuntu') && github.ref == 'refs/heads/main' }}
-      #   uses: JamesIves/github-pages-deploy-action@4.1.5
-      #   with:
-      #     repository-name: scipp/scipp-benchmarks
-      #     branch: main
-      #     folder: scipp-benchmarks
-      #     single-commit: true
-      #     ssh-key: ${{ secrets.BENCHMARKS_DEPLOY_KEY }}
+      - name: Deploy benchmark results
+        uses: JamesIves/github-pages-deploy-action@4.1.5
+        with:
+          branch: main
+          folder: scipp-benchmarks
+          single-commit: true
+          ssh-key: ${{ secrets.BENCHMARKS_DEPLOY_KEY }}
