--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -32,9 +32,10 @@ jobs:
       - run: tox -e lib
       - run: tox -e asv
 
+      # TODO push updated results folder
+
       - name: Deploy benchmark results
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: main
-          folder: scipp-benchmarks
+          folder: scipp-benchmarks/docs
           single-commit: true
