--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -37,5 +37,6 @@ jobs:
       - name: Deploy benchmark results
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          branch: gh_pages
           folder: scipp-benchmarks/docs
           single-commit: true
