--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -32,7 +32,10 @@ jobs:
       - run: tox -e lib
       - run: tox -e asv
 
-      # TODO push updated results folder
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          repository: scipp-benchmarks
+          file_pattern: results/*
 
       - name: Deploy benchmark results
         uses: JamesIves/github-pages-deploy-action@4.1.5
