--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           path: 'scipp-benchmarks'
 
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements/ci.txt
 
