--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -17,15 +17,24 @@ jobs:
           repository: 'scipp/scipp'
           submodules: true
           fetch-depth: 0  # history required so cmake can determine version
+
+      - name: Setup conda environment
+        uses: mamba-org/setup-micromamba@v2
+        with:
+          micromamba-version: 1.5.6-0
+          environment-file: .buildconfig/ci-linux.yml
+          cache-environment: true
+          create-args: python=3.10
+
       - uses: actions/checkout@v3
         with:
           path: 'scipp-benchmarks'
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: '3.10'
+      # - run: python -m pip install --upgrade pip
+      # - run: python -m pip install -r requirements/ci.txt
 
       - uses: hendrikmuhs/ccache-action@v1.2.2
 
