--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     name: Build and run benchmarks
     runs-on: ubuntu-20.04
-
+    defaults:
+      run:
+        shell: bash -l {0} # required for conda env
     steps:
       - uses: actions/checkout@v3
         with:
