--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -32,16 +32,12 @@ jobs:
         with:
           path: 'scipp-benchmarks'
 
-      # - uses: actions/setup-python@v5
-      #   with:
-      #     python-version: '3.10'
-      # - run: python -m pip install --upgrade pip
-      # - run: python -m pip install -r requirements/ci.txt
-
       - uses: hendrikmuhs/ccache-action@v1.2.2
 
-      - run: python -m tox -e lib
-      - run: python -m tox -e asv
+      - run: cmake --preset base
+      - run: cmake --build --preset build
+      - run: ctest --preset test
+      - run: tox -e asv
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
